<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/add_task"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/task_name"
        android:paddingLeft="20dp"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_des"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/task_description"
        android:paddingLeft="20dp"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cb1"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:text="@string/urgent"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cb2"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:text="@string/important"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:entries="@array/category" />

    <Button
        android:id="@+id/btn_pic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/choose_photo" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bt_bg"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="25sp" />
</LinearLayout>