<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140px"
        android:background="@drawable/et_bg"
        android:layout_marginLeft="80px"
        android:layout_marginRight="80px"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_marginLeft="25px"
            android:background="@drawable/user"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25px"
            android:background="@color/line"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/your_id"
            android:layout_marginLeft="25px"
            android:textSize="50px"
            android:textColor="@color/textColor"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140px"
        android:background="@drawable/et_bg"
        android:layout_marginTop="80px"
        android:layout_marginLeft="80px"
        android:layout_marginRight="80px"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_marginLeft="25px"
            android:background="@drawable/password"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25px"
            android:background="@color/line"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginLeft="25px"
            android:textSize="50px"
            android:textColor="@color/textColor"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="140px"
        android:layout_marginLeft="80px"
        android:layout_marginRight="80px"
        android:layout_marginTop="100px"
        android:background="@drawable/bt_bg"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="60px"/>


</LinearLayout>